# goit-pyweb-hw-10

hw10_web/: pyproject.toml
hw10_web/project_quotes/app_quotes/: admin.py  forms.py  views.py
hw10_web/project_quotes/app_quotes/migrations/: 0001_initial.py
hw10_web/project_quotes/project_quotes/: settings.py
hw10_web/project_quotes/users/: forms.py  views.py
hw10_web/project_quotes/users/templates/users/: login.html  signup.html
