[tool.poetry]
name = "hw10-web"
version = "0.1.0"
description = "A Django project for managing quotes."
authors = ["JuliMik gusachenkojulia@gmail.com"]
readme = "README.md"
packages = [{ include = "project_quotes" }]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



